<resources>
    <string name="app_name">Aridnik Employee</string>
    <string name="login">Login</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="appVersion">Version 1.0b</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_sent_to_register_phone_number">OTP sent to register phone number</string>
</resources>
