<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.Login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:drawableLeft="@drawable/ic_mobile"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="@dimen/_10sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="10"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/mobileNumber"/>

        </android.support.design.widget.TextInputLayout>

        <!--suppress AndroidUnknownAttribute -->
        <android.support.design.widget.TextInputLayout
            android:fontFamily="@font/open_sans"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableStart="@drawable/ic_locked"
                android:fontFamily="@font/open_sans"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:imeOptions="actionDone"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>


        <com.aridnik.employee.utils.RippleView
            android:id="@+id/more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            rv_centered="true">

            <Button
                android:textSize="18sp"
                android:id="@+id/login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/open_sans"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/rippelColor" />

        </com.aridnik.employee.utils.RippleView>

    </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/loginVersionTxt"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/colorGrey"
        android:gravity="center_horizontal"
        android:text="@string/appVersion"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>